MIDIData/MIDIData.h

/* __stdcallの定義 */
/*
#ifndef __stdcall
#if defined(WINDOWS) || defined(_WINDOWS) || defined(__WINDOWS) || \
	defined(WIN32) || defined(_WIN32) || defined(__WIN32) || \
	defined(WIN64) || defined(_WIN64) || defined(__WIN64)
#define __stdcall __stdcall
#else
#define __stdcall
#endif
#endif
*/

/* MIDIEvent構造体 */
/* 双方向ダブルリンクリスト構造 */
/* ノード順序は絶対時刻で決定されます */
typedef struct tagMIDIEvent {
	long m_lTempIndex;                  /* このイベントの一時的なインデックス(0から始まる) */
	long m_lTime;                       /* 絶対時刻[Tick]又はSMPTEサブフレーム単位 */
	long m_lKind;                       /* イベントの種類(0x00～0xFF) */
	long m_lLen;                        /* イベントのデータ長さ[バイト] */
	unsigned char* m_pData;             /* イベントのデータバッファへのポインタ */
	unsigned long m_lData;              /* イベントのデータバッファ(MIDIチャンネルイベントのとき使う) */
	struct tagMIDIEvent* m_pNextEvent;  /* 次のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevEvent;  /* 前のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pNextSameKindEvent; /* 次の同じ種類のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevSameKindEvent; /* 前の同じ種類のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pNextCombinedEvent; /* 次の結合イベント保持用ポインタ(なければNULL) */
	struct tagMIDIEvent* m_pPrevCombinedEvent; /* 前の結合イベント保持用ポインタ(なければNULL) */
	void* m_pParent;                    /* 親(MIDITrackオブジェクト)へのポインタ(なければNULL) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDIEvent;
/* MIDITrack構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDITrack {
	long m_lTempIndex;                  /* このトラックの一時的なインデックス(0から始まる) */
	long m_lNumEvent;                   /* トラック内のイベント数 */
	struct tagMIDIEvent* m_pFirstEvent; /* 最初のイベントへのポインタ(なければNULL) */
	struct tagMIDIEvent* m_pLastEvent;  /* 最後のイベントへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevTrack;  /* 前のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextTrack;  /* 次のトラックへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(MIDIDataオブジェクト)へのポインタ */
	long m_lInputOn;                    /* 入力(0=OFF, 1=On) */
	long m_lInputPort;                  /* 入力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lInputChannel;               /* 入力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lOutputOn;                   /* 出力(0=OFF, 1=On) */
	long m_lOutputPort;                 /* 出力ポート(-1=n/a, 0～15=ポート番号) */
	long m_lOutputChannel;              /* 出力チャンネル(-1=n/1, 0～15=チャンネル番号) */
	long m_lTimePlus;                   /* タイム+ */
	long m_lKeyPlus;                    /* キー+ */
	long m_lVelocityPlus;               /* ベロシティ+ */
	long m_lViewMode;                   /* 表示モード(0=通常、1=ドラム) */
	long m_lForeColor;                  /* 前景色 */
	long m_lBackColor;                  /* 背景色 */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDITrack;
/* MIDIData構造体 */
/* 双方向リンクリスト構造 */
typedef struct tagMIDIData {
	unsigned long m_lFormat;            /* SMFフォーマット(0/1) */
	unsigned long m_lNumTrack;          /* トラック数(0～∞) */
	unsigned long m_lTimeBase;          /* タイムベース(例：120) */
	struct tagMIDITrack* m_pFirstTrack; /* 最初のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pLastTrack;  /* 最後のトラックへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pNextSeq;    /* 次のシーケンスへのポインタ(なければNULL) */
	struct tagMIDITrack* m_pPrevSeq;    /* 前のシーケンスへのポインタ(なければNULL) */
	void*  m_pParent;                   /* 親(常にNULL。将来ソングリストをサポート) */
	long m_lReserved1;                  /* 予約領域1(使用禁止) */
	long m_lReserved2;                  /* 予約領域2(使用禁止) */
	long m_lReserved3;                  /* 予約領域3(使用禁止) */
	long m_lReserved4;                  /* 予約領域4(使用禁止) */
	long m_lUser1;                      /* ユーザー用自由領域1(未使用) */
	long m_lUser2;                      /* ユーザー用自由領域2(未使用) */
	long m_lUser3;                      /* ユーザー用自由領域3(未使用) */
	long m_lUserFlag;                   /* ユーザー用自由領域4(未使用) */
} MIDIData;
/* トラックにポートプレフィックスイベントを生成して挿入 */
long __stdcall MIDITrack_InsertPortPrefix (MIDITrack* pTrack, long lTime, long lPort);
/* トラックにエンドオブトラックイベントを生成して挿入 */
long __stdcall MIDITrack_InsertEndofTrack
(MIDITrack* pMIDITrack, long lTime);
/* トラックにテンポイベントを生成して挿入 */
long __stdcall MIDITrack_InsertTempo
(MIDITrack* pMIDITrack, long lTime, long lTempo);
/* トラックにSMPTEオフセットイベントを生成して挿入 */
long MIDITrack_InsertSMPTEOffset 
(MIDITrack* pTrack, long lTime, long lMode, 
 long lHour, long lMin, long lSec, long lFrame, long lSubFrame);
/* トラックに拍子記号イベントを生成して挿入 */
long __stdcall MIDITrack_InsertTimeSignature
(MIDITrack* pMIDITrack, long lTime, long lnn, long ldd, long lcc, long lbb);
/* トラックに調性記号イベントを生成して挿入 */
long __stdcall MIDITrack_InsertKeySignature
(MIDITrack* pMIDITrack, long lTime, long lsf, long lmi);
/* トラックにシーケンサー独自のイベントを生成して挿入 */
long __stdcall MIDITrack_InsertSequencerSpecific
(MIDITrack* pMIDITrack, long lTime, char* pBuf, long lLen);
/* トラックにノートオフイベントを生成して挿入 */
long __stdcall MIDITrack_InsertNoteOff 
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lKey, long lVel);
/* トラックにノートオンイベントを生成して挿入 */
long __stdcall MIDITrack_InsertNoteOn 
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lKey, long lVel);
/* トラックにノートイベントを生成して挿入 */
long __stdcall MIDITrack_InsertNote
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lKey, long lVel, long lDur);
/* トラックにキーアフタータッチイベントを生成して挿入 */
long __stdcall MIDITrack_InsertKeyAftertouch
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lKey, long lVal);
/* トラックにコントロールチェンジイベントを生成して挿入 */
long __stdcall MIDITrack_InsertControlChange
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lNum, long lVal);
/* トラックにRPNチェンジイベントを生成して挿入 */
long __stdcall MIDITrack_InsertRPNChange
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lCC101, long lCC100, long lVal);
/* トラックにNRPNチェンジイベントを生成して挿入 */
long __stdcall MIDITrack_InsertNRPNChange
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lCC99, long lCC98, long lVal);
/* トラックにプログラムチェンジイベントを生成して挿入 */
long __stdcall MIDITrack_InsertProgramChange
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lNum);
/* トラックにパッチチェンジイベントを生成して挿入 */
long __stdcall MIDITrack_InsertPatchChange 
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lCC0, long lCC32, long lNum);
/* トラックにチャンネルアフターイベントを生成して挿入 */
long __stdcall MIDITrack_InsertChannelAftertouch 
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lVal);
/* トラックにピッチベンドイベントを生成して挿入 */
long __stdcall MIDITrack_InsertPitchBend 
	(MIDITrack* pMIDITrack, long lTime, long lCh, long lVal);
/* トラックにシステムエクスクルーシヴイベントを生成して挿入 */
long __stdcall MIDITrack_InsertSysExEvent 
	(MIDITrack* pMIDITrack, long lTime, unsigned char* pBuf, long lLen);
/* トラックからイベントを1つ取り除く(イベントオブジェクトは削除しません) */
long __stdcall MIDITrack_RemoveSingleEvent (MIDITrack* pTrack, MIDIEvent* pEvent);
/* トラックからイベントを取り除く(イベントオブジェクトは削除しません) */
long __stdcall MIDITrack_RemoveEvent (MIDITrack* pMIDITrack, MIDIEvent* pEvent);
/* MIDIトラックが浮遊トラックであるかどうかを調べる */
long __stdcall MIDITrack_IsFloating (MIDITrack* pMIDITrack);
/* MIDIトラックがセットアップトラックとして正しいことを確認する */
long __stdcall MIDITrack_CheckSetupTrack (MIDITrack* pMIDITrack);
/* MIDIトラックがノンセットアップトラックとして正しいことを確認する */
long __stdcall MIDITrack_CheckNonSetupTrack (MIDITrack* pMIDITrack);
/* タイムコードをミリ秒時刻に変換(指定トラック内のテンポイベントを基に計算) */
long __stdcall MIDITrack_TimeToMillisec (MIDITrack* pMIDITrack, long lTime);
/* ミリ秒時刻をタイムコードに変換(指定トラック内のテンポイベントを基に計算) */
long __stdcall MIDITrack_MillisecToTime (MIDITrack* pMIDITrack, long lMillisec);
/* タイムコードを小節：拍：ティックに分解(指定トラック内の拍子記号を基に計算) */
long __stdcall MIDITrack_BreakTimeEx
	(MIDITrack* pMIDITrack, long lTime, long* pMeasure, long* pBeat, long* pTick,
	long* pnn, long* pdd, long* pcc, long* pbb);
/* タイムコードを小節：拍：ティックに分解(指定トラック内の拍子記号を基に計算) */
long __stdcall MIDITrack_BreakTime 
	(MIDITrack* pMIDITrack, long lTime, long* pMeasure, long* pBeat, long* pTick);
/* 小節：拍：ティックからタイムコードを生成(指定トラック内の拍子記号を基に計算) */
long __stdcall MIDITrack_MakeTimeEx 
	(MIDITrack* pMIDITrack, long lMeasure, long lBeat, long lTick, long* pTime,
	long* pnn, long* pdd, long* pcc, long* pbb);
/* 小節：拍：ティックからタイムコードを生成(指定トラック内の拍子記号を基に計算) */
long __stdcall MIDITrack_MakeTime 
	(MIDITrack* pMIDITrack, long lMeasure, long lBeat, long lTick, long* pTime);
/* 指定位置におけるテンポを取得 */
long __stdcall MIDITrack_FindTempo
(MIDITrack* pMIDITrack, long lTime, long* pTempo);
/* 指定位置における拍子記号を取得 */
long __stdcall MIDITrack_FindTimeSignature 
(MIDITrack* pMIDITrack, long lTime, long* pnn, long* pdd, long* pcc, long* pbb);
/* 指定位置における調性記号を取得 */
long __stdcall MIDITrack_FindKeySignature 
(MIDITrack* pMIDITrack, long lTime, long* psf, long* pmi);
/******************************************************************************/
/*                                                                            */
/*　MIDIDataクラス関数                                                        */
/*                                                                            */
/******************************************************************************/

/* MIDIデータの指定トラックの直前にトラックを挿入 */
long __stdcall MIDIData_InsertTrackBefore 
(MIDIData* pMIDIData, MIDITrack* pMIDITrack, MIDITrack* pTarget);
/* MIDIデータの指定トラックの直後にトラックを挿入 */
long __stdcall MIDIData_InsertTrackAfter 
(MIDIData* pMIDIData, MIDITrack* pMIDITrack, MIDITrack* pTarget);
/* MIDIデータにトラックを追加(トラックは予め生成しておく) */
long __stdcall MIDIData_AddTrack (MIDIData* pMIDIData, MIDITrack* pMIDITrack);
/* MIDIデータからトラックを除去(トラック自体及びトラック内のイベントは削除しない) */
long __stdcall MIDIData_RemoveTrack (MIDIData* pMIDIData, MIDITrack* pMIDITrack);
/* MIDIデータの削除(含まれるトラック及びイベントもすべて削除) */
void __stdcall MIDIData_Delete (MIDIData* pMIDIData);
/* MIDIデータを生成し、MIDIデータへのポインタを返す(失敗時NULL) */
MIDIData* __stdcall MIDIData_Create (long lFormat, long lNumTrack, long lTimeMode, long lResolution);
/* MIDIデータのフォーマット0/1/2を取得 */
long __stdcall MIDIData_GetFormat (MIDIData* pMIDIData);
/* MIDIデータのフォーマット0/1/2を設定(変更時コンバート機能を含む) */
long __stdcall MIDIData_SetFormat (MIDIData* pMIDIData, long lFormat);
/* MIDIデータのタイムベース取得 */
long __stdcall MIDIData_GetTimeBase (MIDIData* pMIDIData, long* pMode, long* pResolution);
/* MIDIデータのタイムベースのタイムモード取得 */
long __stdcall MIDIData_GetTimeMode (MIDIData* pMIDIData);
/* MIDIデータのタイムベースのレゾリューション取得 */
long __stdcall MIDIData_GetTimeResolution (MIDIData* pMIDIData);
/* MIDIデータのタイムベース設定 */
long __stdcall MIDIData_SetTimeBase (MIDIData* pMIDIData, long lMode, long lResolution);
/* MIDIデータのトラック数取得 */
long __stdcall MIDIData_GetNumTrack (MIDIData* pMIDIData);
/* トラック数をカウントし、各トラックのインデックスと総トラック数を更新し、トラック数を返す。 */
long __stdcall MIDIData_CountTrack (MIDIData* pMIDIData);
/* XFであるとき、XFのヴァージョンを取得(XFでなければ0) */
long __stdcall MIDIData_GetXFVersion (MIDIData* pMIDIData);
/* MIDIデータの最初のトラックへのポインタを取得(なければNULL) */
MIDITrack* __stdcall MIDIData_GetFirstTrack (MIDIData* pMIDIData);
/* MIDIデータの最後のトラックへのポインタを取得(なければNULL) */
MIDITrack* __stdcall MIDIData_GetLastTrack (MIDIData* pMIDIData);
/* 指定インデックスのMIDIトラックへのポインタを取得する(なければNULL) */
MIDITrack* __stdcall MIDIData_GetTrack (MIDIData* pMIDIData, long lTrackIndex);
/* MIDIデータの開始時刻[Tick]を取得 */
long __stdcall MIDIData_GetBeginTime (MIDIData* pMIDIData);
/* MIDIデータの終了時刻[Tick]を取得 */
long __stdcall MIDIData_GetEndTime (MIDIData* pMIDIData);
/* MIDIデータのタイトルを簡易取得 */
char* __stdcall MIDIData_GetTitleA (MIDIData* pMIDIData, char* pData, long lLen);
#define MIDIData_GetTitle MIDIData_GetTitleW
#define MIDIData_GetTitle MIDIData_GetTitleA
/* MIDIデータのタイトルを簡易設定 */
long __stdcall MIDIData_SetTitleA (MIDIData* pMIDIData, const char* pszData);
#define MIDIData_SetTitle MIDIData_SetTitleW
#define MIDIData_SetTitle MIDIData_SetTitleA
/* MIDIデータのサブタイトルを簡易取得 */
char* __stdcall MIDIData_GetSubTitleA (MIDIData* pMIDIData, char* pData, long lLen);
#define MIDIData_GetSubTitle MIDIData_GetSubTitleW
#define MIDIData_GetSubTitle MIDIData_GetSubTitleA
/* MIDIデータのサブタイトルを簡易設定 */
long __stdcall MIDIData_SetSubTitleA (MIDIData* pMIDIData, const char* pszData);
#define MIDIData_SetSubTitle MIDIData_SetSubTitleW
#define MIDIData_SetSubTitle MIDIData_SetSubTitleA
/* MIDIデータの著作権を簡易取得 */
char* __stdcall MIDIData_GetCopyrightA (MIDIData* pMIDIData, char* pData, long lLen);
#define MIDIData_GetCopyright MIDIData_GetCopyrightW
#define MIDIData_GetCopyright MIDIData_GetCopyrightA
/* MIDIデータの著作権を簡易設定 */
long __stdcall MIDIData_SetCopyrightA (MIDIData* pMIDIData, const char* pszData);
#define MIDIData_SetCopyright MIDIData_SetCopyrightW
#define MIDIData_SetCopyright MIDIData_SetCopyrightA
/* MIDIデータのコメントを簡易取得 */
char* __stdcall MIDIData_GetCommentA (MIDIData* pMIDIData, char* pData, long lLen);
#define MIDIData_GetComment MIDIData_GetCommentW
#define MIDIData_GetComment MIDIData_GetCommentA
/* MIDIデータのコメントを簡易設定 */
long __stdcall MIDIData_SetCommentA (MIDIData* pMIDIData, const char* pszData);
#define MIDIData_SetComment MIDIData_SetCommentW
#define MIDIData_SetComment MIDIData_SetCommentA
/* タイムコードをミリ秒に変換(フォーマット0/1の場合のみ) */
long __stdcall MIDIData_TimeToMillisec (MIDIData* pMIDIData, long lTime);
/* ミリ秒をタイムコードに変換(フォーマット0/1の場合のみ) */
long __stdcall MIDIData_MillisecToTime (MIDIData* pMIDIData, long lMillisec);