MIDIData/MIDIData.bas


' トラックにポートプレフィックスを生成して挿入
Declare Function MIDITrack_InsertPortPrefix Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lPort As Long) As Long

' トラックにエンドオブトラックイベントを生成して挿入
Declare Function MIDITrack_InsertEndofTrack Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long) As Long

' トラックにテンポイベントを生成して挿入
Declare Function MIDITrack_InsertTempo Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lTempo As Long) As Long

' トラックにSMPTEオフセットイベントを生成して挿入
Declare Function MIDITrack_InsertSMPTEOffset Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
    ByVal lMode As Long, ByVal lHour As Long, ByVal lMin As Long, ByVal lSec As Long, _
    ByVal lFrame As Long, ByVal lSubFrame As Long) As Long

' トラックに拍子記号イベントを生成して挿入
Declare Function MIDITrack_InsertTimeSignature Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
     ByVal lnn As Long, ByVal ldd As Long, _
     ByVal lcc As Long, ByVal lbb As Long) As Long

' トラックに調性記号イベントを生成して挿入
Declare Function MIDITrack_InsertKeySignature Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
     ByVal lsf As Long, ByVal lmi As Long) As Long

' トラックにシーケンサー独自のイベントを生成して挿入
Declare Function MIDITrack_InsertSequencerSpecific Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
     ByRef pBuf As Byte, ByVal lLen As Long) As Long
     
' トラックにノートオフイベントを生成して挿入
Declare Function MIDITrack_InsertNoteOff Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lKey As Long, ByVal lVel As Long) As Long
     
' トラックにノートオンイベントを生成して挿入
Declare Function MIDITrack_InsertNoteOn Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lKey As Long, ByVal lVel As Long) As Long

' トラックにノートイベントを生成して挿入
Declare Function MIDITrack_InsertNote Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lKey As Long, ByVal lVel As Long, ByVal lDur As Long) As Long

' トラックにキーアフタータッチイベントを生成して挿入
Declare Function MIDITrack_InsertKeyAftertouch Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lKey As Long, ByVal lVal As Long) As Long

' トラックにコントロールチェンジイベントを生成して挿入
Declare Function MIDITrack_InsertControlChange Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lNum As Long, ByVal lVal As Long) As Long

' トラックにRPNイベントを生成して挿入
Declare Function MIDITrack_InsertRPNChange Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lCC101 As Long, ByVal lCC100 As Long, ByVal lVal As Long) As Long

' トラックにNRPNイベントを生成して挿入
Declare Function MIDITrack_InsertNRPNChange Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lCC99 As Long, ByVal lCC98 As Long, ByVal lVal As Long) As Long

' トラックにプログラムチェンジイベントを生成して挿入
Declare Function MIDITrack_InsertProgramChange Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lNum As Long) As Long

' トラックにパッチチェンジイベントを生成して挿入
Declare Function MIDITrack_InsertPatchChange Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lCC0 As Long, ByVal lCC32 As Long, ByVal lNum As Long) As Long

' トラックにチャンネルアフタータッチイベントを生成して挿入
Declare Function MIDITrack_InsertChannelAftertouch Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lVal As Long) As Long

' トラックにピッチベンドイベントを生成して挿入
Declare Function MIDITrack_InsertPitchBend Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByVal lCh As Long, _
     ByVal lVal As Long) As Long

' トラックにシステムエクスクルーシヴイベントを生成して挿入
Declare Function MIDITrack_InsertSysExEvent Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByRef pBuf As Byte, _
     ByVal lLen As Long) As Long

' トラックからイベントを1つ取り除く(イベントオブジェクトは削除しません) */
Declare Function MIDITrack_RemoveSingleEvent Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal pEvent As Long) As Long

' トラックからイベントを取り除く(イベントオブジェクトは削除しません)
Declare Function MIDITrack_RemoveEvent Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal pEvent As Long) As Long

' MIDIトラックが浮遊トラックであるかどうかを調べる
Declare Function MIDITrack_IsFloating Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long) As Long

' MIDIトラックがセットアップトラックとして正しいことを確認する
Declare Function MIDITrack_CheckSetupTrack Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long) As Long

' MIDIトラックがノンセットアップトラックとして正しいことを確認する
Declare Function MIDITrack_CheckNonSetupTrack Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long) As Long

' タイムコードをミリ秒時刻に変換(指定トラック内のテンポイベントを基に計算)
Declare Function MIDITrack_TimeToMillisec Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long) As Long

' ミリ秒時刻をタイムコードに変換(指定トラック内のテンポイベントを基に計算)
Declare Function MIDITrack_MillisecToTime Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lMillisec As Long) As Long

' タイムコードを小節：拍：ティックに分解(指定トラック内の拍子記号を基に計算)
Declare Function MIDITrack_BreakTimeEx Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
    ByRef pMeasure As Long, ByRef pBeat As Long, ByRef pTick As Long, _
    ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' タイムコードを小節：拍：ティックに分解(指定トラック内の拍子記号から計算)
Declare Function MIDITrack_BreakTime Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
    ByRef pMeasure As Long, ByRef pBeat As Long, ByRef pTick As Long) As Long

' 小節：拍：ティックからタイムコードを生成(指定トラック内の拍子記号から計算)
Declare Function MIDITrack_MakeTimeEx Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lMeasure As Long, ByVal lBeat As Long, _
    ByVal lTick As Long, ByRef pTime As Long, _
    ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' 小節：拍：ティックからタイムコードを生成(指定トラック内の拍子記号から計算)
Declare Function MIDITrack_MakeTime Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal pMeasure As Long, ByVal pBeat As Long, _
    ByVal pTick As Long, ByRef pTime As Long) As Long

' 指定時刻におけるテンポを取得
Declare Function MIDITrack_FindTempo Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, ByRef pTempo As Long) As Long

' 指定時刻における拍子記号を取得
Declare Function MIDITrack_FindTimeSignature Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
     ByRef pnn As Long, ByRef pdd As Long, ByRef pcc As Long, ByRef pbb As Long) As Long

' 指定時刻における調性記号を取得
Declare Function MIDITrack_FindKeySignature Lib "MIDIData.dll" _
    (ByVal pMIDITrack As Long, ByVal lTime As Long, _
    ByRef psf As Long, ByRef pmi As Long) As Long


'*********************************************************************/
'*                                                                   */
'*　MIDIDataクラス関数                                                */
'*                                                                   */
'*********************************************************************/

' MIDIデータの指定トラックの直前にトラックを挿入
Declare Function MIDIData_InsertTrackBefore Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal pMIDITrack As Long, ByVal pTarget As Long) As Long

' MIDIデータの指定トラックの直後にトラックを挿入
Declare Function MIDIData_InsertTrackAfter Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal pMIDITrack As Long, ByVal pTarget As Long) As Long

' MIDIデータにトラックを追加(トラックは予め作成しておく)
Declare Function MIDIData_AddTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal pMIDITrack As Long) As Long

' MIDIデータからトラックを除去(トラック自体及びトラック内のイベントは削除しない)
Declare Function MIDIData_RemoveTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal pMIDITrack As Long) As Long

' MIDIデータの削除(含まれるトラック及びイベントもすべて削除)
Declare Function MIDIData_Delete Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータを生成し、MIDIデータへのポインタを返す(失敗時NULL)
Declare Function MIDIData_Create Lib "MIDIData.dll" _
    (ByVal lFormat As Long, ByVal lNumTrack As Long, _
     ByVal lTimeBase As Long, ByVal lTimeResolution As Long) As Long

' MIDIデータのフォーマット0/1/2を取得
Declare Function MIDIData_GetFormat Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータのフォーマット0/1/2を設定(変更時コンバート機能を含む)
Declare Function MIDIData_SetFormat Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lFormat As Long) As Long

' MIDIデータのタイムベースを取得
Declare Function MIDIData_GetTimeBase Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByRef lTimeMode As Long, _
     ByRef lTimeResolution As Long) As Long

' MIDIデータのタイムモード取得
Declare Function MIDIData_GetTimeMode Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータのタイムレゾリューション取得
Declare Function MIDIData_GetTimeResolution Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータのタイムベース設定
Declare Function MIDIData_SetTimeBase Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTimeMode As Long, _
     ByVal lTimeResolution As Long) As Long

' MIDIデータのトラック数取得
Declare Function MIDIData_GetNumTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータのトラック数をカウントして取得
Declare Function MIDIData_CountTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' XFであるとき、XFのヴァージョンを取得(XFでなければ0)
Declare Function MIDIData_GetXFVersion Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータの最初のトラックへのポインタを取得(なければNULL)
Declare Function MIDIData_GetFirstTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータの最後のトラックへのポインタを取得(なければNULL)
Declare Function MIDIData_GetLastTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータの指定番号のトラックへのポインタを取得(なければNULL)
Declare Function MIDIData_GetTrack Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTrackIndex As Long) As Long

' MIDIデータの開始時刻[tick]の取得
Declare Function MIDIData_GetBeginTime Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータの終了時刻[tick]の取得
Declare Function MIDIData_GetEndTime Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long) As Long

' MIDIデータのタイトルの簡易取得
Declare Function MIDIData_GetTitle Lib "MIDIData.dll" _
    Alias "MIDIData_GetTitleA" _
    (ByVal pMIDIData As Long, ByVal pData As String, ByVal lLen As Long) As Long

' MIDIデータのタイトルの簡易設定
Declare Function MIDIData_SetTitle Lib "MIDIData.dll" _
    Alias "MIDIData_SetTitleA" _
    (ByVal pMIDIData As Long, ByVal strText As String) As Long

' MIDIデータのサブタイトルの簡易取得
Declare Function MIDIData_GetSubTitle Lib "MIDIData.dll" _
    Alias "MIDIData_GetSubTitleA" _
    (ByVal pMIDIData As Long, ByVal pData As String, ByVal lLen As Long) As Long

' MIDIデータのサブタイトルの簡易設定
Declare Function MIDIData_SetSubTitle Lib "MIDIData.dll" _
    Alias "MIDIData_SetSubTitleA" _
    (ByVal pMIDIData As Long, ByVal strText As String) As Long

' MIDIデータの著作権の簡易取得
Declare Function MIDIData_GetCopyright Lib "MIDIData.dll" _
    Alias "MIDIData_GetCopyrightA" _
    (ByVal MIDIData As Long, ByVal pData As String, ByVal lLen As Long) As Long

' MIDIデータの著作権の簡易設定
Declare Function MIDIData_SetCopyright Lib "MIDIData.dll" _
    Alias "MIDIData_SetCopyrightA" _
    (ByVal pMIDIData As Long, ByVal strText As String) As Long

' MIDIデータのコメントの簡易取得
Declare Function MIDIData_GetComment Lib "MIDIData.dll" _
    Alias "MIDIData_GetCommentA" _
    (ByVal pMIDIData As Long, ByVal pData As String, ByVal lLen As Long) As Long

' MIDIデータのコメントの簡易設定
Declare Function MIDIData_SetComment Lib "MIDIData.dll" _
    Alias "MIDIData_SetCommentA" _
    (ByVal pMIDIData As Long, ByVal strText As String) As Long

' タイムコードをミリ秒に変換(フォーマット0/1の場合のみ)
Declare Function MIDIData_TimeToMillisec Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lTime As Long) As Long

' ミリ秒をタイムコードに変換(フォーマット0/1の場合のみ)
Declare Function MIDIData_MillisecToTime Lib "MIDIData.dll" _
    (ByVal pMIDIData As Long, ByVal lMillisec As Long) As Long
